--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-<p>You've reached Tahiyat's course page!</p>
+<!DOCTYPE html>
+<html>
+<h1>I am Tahiyat Chy and this is my ITIS3135 First Course Page </h1>
+</html>
