fix: update navigation

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <nav id="primary-nav">
         <ul>
           <li><a href="." title="Home">Home</a></li>
-          <li><a href=".introduction" title="Introduction">Introduction</a></li>
-          <li><a href=".contract" title="Contract"></a></li>
+          <li><a href="introduction.html" title="Introduction">Introduction</a></li>
+          <li><a href="contract.html" title="Contract">Contract</a></li>
         </ul>
       </nav>
       <!--TODO: update secondary navigation links as pages are created-->
