--- a/introduction.html
+++ b/introduction.html
@@ -11,9 +11,9 @@
       <h1>ITSC 3135 | Tahiyat Chy's | Thorny Chimaera</h1>
       <nav id="primary-nav">
         <ul>
-          <li><a href=".index" title="Home">Home</a></li>
+          <li><a href="index.html" title="Home">Home</a></li>
           <li><a href="." title="Introduction">Introduction</a></li>
-          <li><a href=".contract" title="Contract"></a></li>
+          <li><a href="contract.html" title="Contract">Contract</a></li>
         </ul>
       </nav>
       <!--TODO: update secondary navigation links as pages are created-->
