fix: comment out unused secondary navigation

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         </ul>
       </nav>
       <!--TODO: update secondary navigation links as pages are created-->
-      <nav id="secondary-nav">
+      <!--<nav id="secondary-nav">
         <ul>
           <li></li>
         </ul>
-      </nav>
+      </nav>-->
     </header>
     <main>
       <h2>Home</h2>
