trying to recover itis3135

--- a/contract.html
+++ b/contract.html
@@ -2,18 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>ITSC 3135 | Tahiyat Chy's | Thorny Chimaera | Contract</title>
+    <title>ITIS 3135 | Tahiyat Chy's | Thorny Chimaera | Contract</title>
     <link rel="stylesheet" href="styles/default.css">
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
-      <h1>ITSC 3135 | Tahiyat Chy's | Thorny Chimaera</h1>
+      <h1>ITIS 3135 | Tahiyat Chy's | Thorny Chimaera</h1>
       <nav id="primary-nav">
         <ul>
           <li><a href="index.html" title="Home">Home</a></li>
           <li><a href="introduction.html" title="Introduction">Introduction</a></li>
-          <li><a href="." title="Contract">Contract</a></li>
+          <li><a href="contract.html" title="Contract">Contract</a></li>
         </ul>
       </nav>
       <!--TODO: update secondary navigation links as pages are created-->
@@ -36,17 +36,13 @@
       <a href="https://webpages.charlotte.edu/tchy/">CLT Web</a> | 
       <a href="https://github.com/tahiyatchy">GitHub.com</a> |
       <a href="https://tahiyatchy.github.io">GitHub.io</a> | 
-      <a href="https://webpages.charlotte.edu/tchy/ITIS3135/">ITIS 3135</a> | 
-      <a href="https://www.freecodecamp.org/tahiyatchy">FreeCodeCamp</a>
-      <a href="https://www.codecademy.com/profiles/tahiyatchy">Codecademy</a>
+      <a href="https://webpages.charlotte.edu/tchy/itis3135/">ITIS 3135</a> | 
+      <a href="https://www.freecodecamp.org/tahiyatchy">FreeCodeCamp</a> | 
+      <a href="https://www.codecademy.com/profiles/tahiyatchy">Codecademy</a> | 
       <a href="https://www.linkedin.com/in/tahiyatchy/">LinkedIn</a>
     </p></nav>
       <p id="acknowledgement">
         Designed by <a href="https://webpages.charlotte.edu/tchy/" title="Tahiyat Chy">Chimaera Productions ©2025</a>
-      </p>
-      <p class="validation">
-        <a href="https://validator.w3.org/check?uri=referer">HTML Validation</a>
-        <a href="https://jigsaw.w3.org/css-validator/check?uri=referer">CSS Validation</a>
       </p>
   </footer>
   </body>
