--- a/index.html
+++ b/index.html
@@ -26,11 +26,16 @@
     <main>
       <h2>Home</h2>
       <figure>
-        <img src="" alt="" id="cover">
-        <figcaption></figcaption>
+        <img src="images/scenery-course-cover.jpeg" 
+        alt="painting of clouds on the horizon" id="cover">
+        <figcaption>A Painting of Clouds on the Horizon 
+          <a href="https://www.pinterest.com/pin/8936899255840913/">via Pinterest</a>
+        </figcaption>
       </figure>
-      <p></p>
-      <p></p>
+      <p>You've reached Tahiyat Chy's ITIS 3135 home page!</p>
+      <p>This site will be updated throughout the semester. For now,
+         please use the navigation links to find your way around!
+      </p>
     </main>
     <footer>
     <nav><p> 
