--- a/introduction.html
+++ b/introduction.html
@@ -33,7 +33,6 @@
         </figcaption>
       </figure>
       <p>I am an international student from the smallest sovereign state in the Western hemisphere, St. Kitts and Nevis, where my parents immigrated from Bangladesh. I enjoy watching movies and dissecting them extensively using the literary and visual microscope in my brain. I dabbled in code for the first time when I was about 12 when I modified the HTML code in my Tumblr bio to add a hyperlink.</p>
-      <p>
         <ul>
           <li><strong>Personal Background:</strong> I was born and lived in St. Kitts until coming to UNC Charlotte. I’ve known I’d be going to school for Computer Science since I was about 13, which was also when I decided I would go into machine learning and data science.</li>
           <li><strong>Academic Background:</strong> I am a senior majoring in Computer Science and concentrating in Data Science. I plan on earning my MS in Computer Science via the early entry program.</li>
@@ -47,7 +46,6 @@
 <li><strong>WRDS 4201 - Composing Across Borders:</strong> retake because the structure and requirements of the course the first time I took it wasn’t for me, especially at the time, and I wasn’t happy with the grade</li>
           </ul></li>
         </ul>
-      </p>
     </main>
     <footer>
     <nav><p> 
@@ -60,7 +58,7 @@
       <a href="https://www.linkedin.com/in/tahiyatchy/">LinkedIn</a>
     </p></nav>
       <p id="acknowledgement">
-        Designed by <a href="https://webpages.charlotte.edu/tchy/" title="Tahiyat Chy">Chimaera Productions ©2025</a>
+        Designed by <a href="https://webpages.charlotte.edu/tchy/" title="Tahiyat Chy">Chy Designed ©2025</a>
       </p>
   </footer>
   </body>
