--- a/contract.html
+++ b/contract.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>ITIS 3135 | Tahiyat Chy's | Thorny Chimaera | Contract</title>
+    <title>ITIS 3135 | Tahiyat Chy's | Thorny Chimaera | Introduction</title>
     <link rel="stylesheet" href="styles/default.css">
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
   </head>
@@ -17,14 +17,14 @@
         </ul>
       </nav>
       <!--TODO: update secondary navigation links as pages are created-->
-     <!-- <nav id="secondary-nav">
+      <!--<nav id="secondary-nav">
         <ul>
           <li></li>
         </ul>
-      </nav> -->
+      </nav>-->
     </header>
     <main>
-      <h2>Contract</h2>
+      <h2>Introduction</h2>
       <figure>
         <img src="images/scenery-course-cover.jpeg" 
         alt="painting of clouds on the horizon" id="cover">
@@ -32,7 +32,22 @@
           <a href="https://www.pinterest.com/pin/8936899255840913/">via Pinterest</a>
         </figcaption>
       </figure>
-      <p>I, TAHIYAT N.N. CHY agree to abide by the terms of the course contract in my FALL 2025, ITIS 3135, FRONT-END WEB APPLICATION DEVELOPMENT with my instructor, Professor D.I. von Briesen. I understand that all work that I do on publicly available online tools will be available to the world, and will not put information there that is inappropriate for schoolwork, or that I wish to keep private. I also understand that it is my work that counts for attendance, not logins or showing up for class. As such, failure to turn in assignments may show as absences. I also understand that given the structure and content of this class it’s possible to find many examples online or even view my classmates’ code directly. I swear that I will only use these resources to learn, and will not cut and paste code except where I have properly given credit (i.e. external libraries) and never from my classmates. Signed: Tahiyat N.N. Chy , 31/08/2025</p>
+      <p>I am an international student from the smallest sovereign state in the Western hemisphere, St. Kitts and Nevis, where my parents immigrated from Bangladesh. I enjoy watching movies and dissecting them extensively using the literary and visual microscope in my brain. I dabbled in code for the first time when I was about 12 when I modified the HTML code in my Tumblr bio to add a hyperlink.</p>
+      <p>
+        <ul>
+          <li><strong>Personal Background:</strong> I was born and lived in St. Kitts until coming to UNC Charlotte. I’ve known I’d be going to school for Computer Science since I was about 13, which was also when I decided I would go into machine learning and data science.</li>
+          <li><strong>Academic Background:</strong> I am a senior majoring in Computer Science and concentrating in Data Science. I plan on earning my MS in Computer Science via the early entry program.</li>
+          <li><strong>Courses I'm taking and why:</strong>
+          <ul>
+            <li><strong>ITIS 3135 - Front-End Web App Development:</strong> fulfills technical elective requirement; a skill I’d like to develop for my own projects</li>
+<li><strong>AMST 3090 - Politics and Conflict in American Horror & Sci-Fi Film:</strong> the perfect intersection of my greatest interests</li>
+<li><strong> 1502 - Introduction to Film & Media:</strong> I enjoy analysing film; self-indulgent course</li>
+<li><strong>ITSC 3688 - Computers and Their Impact on Society:</strong> major requirement; a less technical course to balance out my other computing courses</li>
+<li><strong>ITCS 3153 - Introduction to Artificial Intelligence:</strong> helps me get started on the material I would like to study in my MS program and use in my career</li>
+<li><strong>WRDS 4201 - Composing Across Borders:</strong> retake because the structure and requirements of the course the first time I took it wasn’t for me, especially at the time, and I wasn’t happy with the grade</li>
+          </ul></li>
+        </ul>
+      </p>
     </main>
     <footer>
     <nav><p> 
@@ -45,7 +60,7 @@
       <a href="https://www.linkedin.com/in/tahiyatchy/">LinkedIn</a>
     </p></nav>
       <p id="acknowledgement">
-        Designed by <a href="https://webpages.charlotte.edu/tchy/" title="Tahiyat Chy">Chimaera Productions ©2025</a>
+        Designed by <a href="https://webpages.charlotte.edu/tchy/" title="Tahiyat Chy">Chy Designed ©2025</a>
       </p>
   </footer>
   </body>
