--- a/introduction.html
+++ b/introduction.html
@@ -41,7 +41,7 @@
           <ul>
             <li><strong>ITIS 3135 - Front-End Web App Development:</strong> fulfills technical elective requirement; a skill I’d like to develop for my own projects</li>
 <li><strong>AMST 3090 - Politics and Conflict in American Horror & Sci-Fi Film:</strong> the perfect intersection of my greatest interests</li>
-<li><strong> 1502 - Introduction to Film & Media:</strong> I enjoy analysing film; self-indulgent course</li>
+<li><strong>FILM 1502 - Introduction to Film & Media:</strong> I enjoy analysing film; self-indulgent course</li>
 <li><strong>ITSC 3688 - Computers and Their Impact on Society:</strong> major requirement; a less technical course to balance out my other computing courses</li>
 <li><strong>ITCS 3153 - Introduction to Artificial Intelligence:</strong> helps me get started on the material I would like to study in my MS program and use in my career</li>
 <li><strong>WRDS 4201 - Composing Across Borders:</strong> retake because the structure and requirements of the course the first time I took it wasn’t for me, especially at the time, and I wasn’t happy with the grade</li>
