--- a/introduction.html
+++ b/introduction.html
@@ -58,7 +58,7 @@
       <a href="https://www.linkedin.com/in/tahiyatchy/">LinkedIn</a>
     </p></nav>
       <p id="acknowledgement">
-        Designed by <a href="https://webpages.charlotte.edu/tchy/" title="Tahiyat Chy">Chy Designed ©2025</a>
+        Designed by <a href="https://webpages.charlotte.edu/tchy/" title="Tahiyat Chy">Chimaera Productions ©2025</a>
       </p>
   </footer>
   </body>
