feat: company website

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <a href="https://www.linkedin.com/in/tahiyatchy/">LinkedIn</a>
     </p></nav>
       <p id="acknowledgement">
-        Designed by <a href="https://webpages.charlotte.edu/tchy/" title="Tahiyat Chy">Chimaera Productions ©2025</a>
+        Designed by <a href="https://webpages.charlotte.edu/tchy/itis3135/chydesigned.com" title="ChyDesigned">ChyDesigned Ltd. ©2025</a>
       </p>
   </footer>
   </body>
