fix: accumulus errors

--- a/fccfsjs_outline.html
+++ b/fccfsjs_outline.html
@@ -21,7 +21,8 @@
       </figure>
     <p>
         I, TAHIYAT N.N. CHY intend to finish the freeCodeCamp Full Stack Developer JavaScript section over the next 6 weeks according to the following general schedule:
-        <table border="1">
+        </p>
+        <table>
     <thead>
         <tr>
             <th>Topic</th>
@@ -142,7 +143,6 @@
         </tr>
     </tbody>
 </table>
-    </p>
     <p>
         I acknowledge that this is a single assignment within the course and not broken out into parts like the previous certification and will take responsibility for pacing myself.
     </p>
