--- a/hsrethics/index.html
+++ b/hsrethics/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ethical Research Resource - Home</title>
     <link rel="stylesheet" href="styles/default.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
     <header>
@@ -27,45 +28,29 @@
             <h2>Welcome to the Interactive Ethical Human Subject Research Resource</h2>
             <p>Your comprehensive guide to understanding and applying ethical principles in human subjects research.</p>
         </div>
-        
-        <div class="module-grid">
-            <div class="module-card" onclick="location.href='#about'">
-                <h3>About This Resource</h3>
-                <p>Learn about the purpose and scope of this educational platform.</p>
-            </div>
-            <div class="module-card" onclick="location.href='#disclaimers'">
-                <h3>Disclaimers</h3>
-                <p>Important legal and educational disclaimers.</p>
-            </div>
-            <div class="module-card" onclick="location.href='#terms'">
-                <h3>Terms of Service</h3>
-                <p>Usage terms and conditions for this resource.</p>
-            </div>
-            <div class="module-card" onclick="location.href='#resources'">
-                <h3>Resources and References</h3>
-                <p>Additional materials and reference documents.</p>
+
+        <div class="clinical-trials-container content-section lazy-section">
+            <h3>Real Clinical Trials Data</h3>
+            <div id="clinical-trials-data">
+                <div class="loading-message">Loading current clinical trials involving ethics research...</div>
             </div>
         </div>
-
-        <button id="shuffleModules" class="shuffle-btn">Shuffle All Modules</button>
-
-        <!-- Content Sections -->
-        <section id="about" class="content-section">
+        <section id="about" class="content-section lazy-section">
             <h3>About This Resource</h3>
             <p>This platform is designed to help students and researchers understand and apply ethical principles in human subjects research according to The Belmont Report, HIPAA, and other regulatory frameworks.</p>
         </section>
 
-        <section id="disclaimers" class="content-section">
+        <section id="disclaimers" class="content-section lazy-section">
             <h3>Disclaimers</h3>
             <p>This resource is for educational purposes only and does not constitute legal advice. Always consult with your Institutional Review Board (IRB) for official guidance.</p>
         </section>
 
-        <section id="terms" class="content-section">
+        <section id="terms" class="content-section lazy-section">
             <h3>Terms of Service</h3>
             <p>By using this resource, you agree to use it for educational purposes and understand that the scenarios presented are hypothetical training exercises.</p>
         </section>
 
-        <section id="resources" class="content-section">
+        <section id="resources" class="content-section lazy-section">
             <h3>Resources and References</h3>
             <ul>
                 <li>The Belmont Report</li>
@@ -87,6 +72,102 @@
         </div>
     </footer>
 
-    <script src="scripts/include.js"></script>
+    <script>
+        function loadClinicalTrialsExample() {
+            $.ajax({
+                url: 'https://clinicaltrials.gov/api/query/study_fields?expr=ethics+research&fields=NCTId,BriefTitle,Condition,OverallStatus&min_rnk=1&max_rnk=5&fmt=json',
+                method: 'GET',
+                success: function(data) {
+                    if (data.StudyFieldsResponse && data.StudyFieldsResponse.StudyFields) {
+                        displayClinicalTrials(data.StudyFieldsResponse.StudyFields);
+                    } else {
+                        displayFallbackTrials();
+                    }
+                },
+                error: function() {
+                    displayFallbackTrials();
+                }
+            });
+        }
+
+        function displayClinicalTrials(trials) {
+            let trialsHTML = '<h4>Current Clinical Trials Involving Ethics Research</h4>';
+            trials.forEach(trial => {
+                trialsHTML += `
+                    <div class="trial-example">
+                        <h5>${trial.BriefTitle ? trial.BriefTitle[0] : 'Ethics in Clinical Research Study'}</h5>
+                        <p><strong>Status:</strong> ${trial.OverallStatus ? trial.OverallStatus[0] : 'Recruiting or Active'}</p>
+                        <p><strong>Clinical Trial ID:</strong> ${trial.NCTId ? trial.NCTId[0] : 'NCTXXXXXXX'}</p>
+                        <p><strong>Focus:</strong> ${trial.Condition ? trial.Condition[0] : 'Research Ethics and Participant Protection'}</p>
+                    </div>
+                `;
+            });
+            trialsHTML += `<p><small>Source: ClinicalTrials.gov API - Real-time clinical trials data</small></p>`;
+            $('#clinical-trials-data').html(trialsHTML);
+        }
+
+        function displayFallbackTrials() {
+            $('#clinical-trials-data').html(`
+                <h4>Example Clinical Trials Involving Ethics Research</h4>
+                <div class="trial-example">
+                    <h5>Ethical Considerations in Vulnerable Population Research</h5>
+                    <p><strong>Status:</strong> Active, not recruiting</p>
+                    <p><strong>Focus:</strong> Informed consent processes in cognitively impaired populations</p>
+                    <p><em>This example illustrates the importance of special ethical considerations when working with vulnerable groups.</em></p>
+                </div>
+                <div class="trial-example">
+                    <h5>Data Privacy and Confidentiality in Genetic Research</h5>
+                    <p><strong>Status:</strong> Recruiting</p>
+                    <p><strong>Focus:</strong> Ethical data handling in genomic studies</p>
+                    <p><em>Demonstrates current challenges in maintaining privacy while advancing genetic research.</em></p>
+                </div>
+                <p><small>Note: These are representative examples. Real clinical trials data would load here when available.</small></p>
+            `);
+        }
+
+        document.addEventListener('DOMContentLoaded', function() {
+            const currentPage = window.location.pathname.split('/').pop() || 'index.html';
+            const navLinks = document.querySelectorAll('.nav-menu a');
+            navLinks.forEach(link => {
+                if (link.getAttribute('href') === currentPage) {
+                    link.classList.add('active');
+                } else {
+                    link.classList.remove('active');
+                }
+            });
+
+            loadClinicalTrialsExample();
+
+            const sections = document.querySelectorAll('.lazy-section');
+            const sectionObserver = new IntersectionObserver((entries, observer) => {
+                entries.forEach(entry => {
+                    if (entry.isIntersecting) {
+                        entry.target.classList.add('loaded');
+                        observer.unobserve(entry.target);
+                    }
+                });
+            }, {
+                threshold: 0.1,
+                rootMargin: '50px'
+            });
+
+            sections.forEach(section => {
+                sectionObserver.observe(section);
+            });
+        });
+    </script>
+
+    <style>
+        .lazy-section {
+            opacity: 0;
+            transform: translateY(20px);
+            transition: opacity 0.6s ease, transform 0.6s ease;
+        }
+
+        .lazy-section.loaded {
+            opacity: 1;
+            transform: translateY(0);
+        }
+    </style>
 </body>
 </html>
