feat: added example sites

--- a/hsrethics/project_overview.html
+++ b/hsrethics/project_overview.html
@@ -200,6 +200,15 @@
         </ul>
     </div>
 </div>
+    <br><br>
+    <h4>Example Sites</h4>
+    <p>
+        The following sites serve as the main inspiration and reference for the central interactive quiz functionality implemented here:
+        <ul>
+            <li><a href="https://www.thegreencardgame.com/">Green Card Game</a></li>
+            <li><a href="https://en.akinator.com/">Akinator</a></li>
+        </ul>
+    </p>
         </section>
     </main>
 
