--- a/hsrethics/project_overview.html
+++ b/hsrethics/project_overview.html
@@ -157,37 +157,6 @@
     <footer data-include="components/footer.html">
     </footer>
     <script src="scripts/HTMLinclude.js"></script>
-    <script>
-        // Set active navigation link
-        document.addEventListener('DOMContentLoaded', function() {
-            const currentPage = window.location.pathname.split('/').pop() || 'index.html';
-            const navLinks = document.querySelectorAll('.nav-menu a');
-            navLinks.forEach(link => {
-                if (link.getAttribute('href') === currentPage) {
-                    link.classList.add('active');
-                } else {
-                    link.classList.remove('active');
-                }
-            });
-
-            // Lazy loading for sections
-            const sections = document.querySelectorAll('.lazy-section');
-            const sectionObserver = new IntersectionObserver((entries, observer) => {
-                entries.forEach(entry => {
-                    if (entry.isIntersecting) {
-                        entry.target.classList.add('loaded');
-                        observer.unobserve(entry.target);
-                    }
-                });
-            }, {
-                threshold: 0.1,
-                rootMargin: '50px'
-            });
-
-            sections.forEach(section => {
-                sectionObserver.observe(section);
-            });
-        });
-    </script>
+    <script src="scripts/project_overview.js"></script>
 </body>
 </html>
